add project dependencies, and build scripts to package.json.

--- a/package.json
+++ b/package.json
@@ -2,8 +2,11 @@
   "name": "@tubitid/badge-scheme",
   "version": "1.0.0",
   "description": "Badge protobuf and mongoose schemes.",
-  "main": "index.js",
+  "main": "lib/proto/badge.js",
   "scripts": {
+    "protoc": "./protoc-ts-generate.sh ./lib/proto",
+    "build": "npm run protoc",
+    "prepublishOnly": "npm run build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -26,5 +29,10 @@
   "dependencies": {},
   "optionalDependencies": {
     "google-protobuf": "^3.5.0"
+  },
+  "devDependencies": {
+    "@types/google-protobuf": "^3.2.7",
+    "ts-protoc-gen": "^0.6.0",
+    "typescript": "^2.8.3"
   }
 }
