--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
   "main": "lib/proto/badge.js",
   "types": "lib/proto/badge.d.ts",
   "scripts": {
+    "buildJSONStatic": "pbjs -t json -o ./lib/proto/badge.json ./badge.proto",
     "buildJSStatic": "pbjs -t static-module -w commonjs -o ./lib/proto/badge.js ./badge.proto",
     "buildTSStatic": "pbts -o ./lib/proto/badge.d.ts ./lib/proto/badge.js",
-    "buildStatic": "npm run buildJSStatic && npm run buildTSStatic",
+    "buildStatic": "npm run buildJSONStatic && npm run buildJSStatic && npm run buildTSStatic",
     "build": "mkdir -p ./lib/proto && npm run buildStatic",
     "prepublishOnly": "npm run build",
     "test": "echo \"Error: no test specified\" && exit 1"
